# jaxsim

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  MUJOCO_LOG.TXT  README.md  SDFORMAT_MIGRATION.md  environment.yml  garpez.urdf  jaxsim_sdf_contacts_box.ipynb  new_box.urdf  pyproject.toml  setup.cfg  test.py  test_aba.py  test_frame.py  test_friction.py  test_sdf.py  test_sdformat_replacement.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: CODEOWNERS  ci_cd.yml  gpu_benchmark.yml  pixi.yml  read_the_docs.yml  run_benchmarks.yml  style.yml  update_pixi_lockfile.yml
benchmarks/: data.js
docs/: Makefile  conf.py  examples.rst  index.rst  jaxsim_conda_env.yml  make.bat  requirements.txt
docs/guide/: configuration.rst  install.rst
docs/modules/: api.rst  high_level.rst  index.rst  integrators.rst  math.rst  mujoco.rst  parsers.rst  physics.rst  rbda.rst  simulation.rst  sixd.rst  typing.rst  utils.rst
docs/source/: conf.py  index.rst  usage.rst
examples/: MUJOCO_LOG.TXT  PD_controller.ipynb  Parallel_computing 1DOF SOFT.ipynb  Parallel_computing.ipynb  README.md  Rigid_body_dynamics.ipynb  bouncing_ball.py  example_falling_model.py  example_featherstone_rolling_disc.py  free_falling_model_cleaned.py  jaxsim_as_multibody_dynamics_library.ipynb  jaxsim_as_physics_engine.ipynb  jaxsim_as_physics_engine_advanced.ipynb  jaxsim_for_robot_controllers.ipynb  jaxsim_sdf_contacts.ipynb  jaxsim_sdf_contacts_box.ipynb  jaxsim_sdf_contacts_cylinder.ipynb  pixi.toml
examples/assets/: build_cartpole_urdf.py  cartpole.urdf
examples/resources/: ant.sdf  cartpole.urdf  cube.sdf  cube.urdf  disc.sdf
src/jaxgym/: __main__.py  stable_baselines.py
src/jaxgym/_spaces/: __init__.py  pytree_orig.py  space.py
src/jaxgym/envs/: __init__.py  ant.py  cartpole.py
src/jaxgym/functional/: __init__.py  func_env.py  func_space.py  func_wrapper.py
src/jaxgym/functional/_jax/: _autoreset.py
src/jaxgym/functional/jax/: env.py
src/jaxgym/jax/: __init__.py  dataclass_func_env.py  dataclass_func_env_wrapper.py  env.py  jaxsim_func_env.py  pytree_space.py
src/jaxgym/tests/: test_spaces.py
src/jaxgym/vector/jax/: __init__.py  vector_env.py
src/jaxgym/vector/jax/wrappers/: __init__.py  flatten_spaces.py  tensordict.py
src/jaxgym/wrappers/: __init__.py  clip_action.py  state.py  transform.py
src/jaxgym/wrappers/jax/: __init__.py  action_noise.py  clip_action.py  flatten_spaces.py  nan_handler.py  observation_noise.py  squash_action.py  time_limit.py  time_limit_sb.py  to_numpy.py  transform.py
src/jaxsim/: __init__.py  exceptions.py  logging.py  typing.py  utils.py
src/jaxsim/api/: __init__.py  actuation_model.py  com.py  common.py  contact.py  contact_model.py  data.py  frame.py  integrator_types.py  integrators.py  joint.py  kin_dyn_parameters.py  link.py  model.py  ode.py  ode_data.py  references.py  rigid_contacts.py  soft_constrained_contacts.py  soft_contacts.py
src/jaxsim/high_level/: __init__.py  common.py  joint.py  link.py  model.py  world.py
src/jaxsim/integrators/: __init__.py  common.py  fixed_step.py  variable_step.py
src/jaxsim/math/: __init__.py  adjoint.py  conv.py  cross.py  inertia.py  joint.py  joint_model.py  plucker.py  quaternion.py  rotation.py  skew.py  transform.py  utils.py
src/jaxsim/mujoco/: __init__.py  __main__.py  loaders.py  model.py  utils.py  visualizer.py
src/jaxsim/parsers/: __init__.py  kinematic_graph.py
src/jaxsim/parsers/descriptions/: __init__.py  collision.py  joint.py  link.py  model.py
src/jaxsim/parsers/rod/: __init__.py  meshes.py  parser.py  utils.py
src/jaxsim/parsers/sdf/: parser.py  utils.py
src/jaxsim/parsers/sdformat/: parser.py  utils.py
src/jaxsim/physics/: __init__.py
src/jaxsim/physics/algos/: __init__.py  aba.py  aba_motors.py  coriolis.py  crba.py  forward_kinematics.py  jacobian.py  rnea.py  rnea_motors.py  soft_contacts.py  terrain.py  utils.py
src/jaxsim/physics/model/: ground_contact.py  physics_model.py  physics_model_state.py
src/jaxsim/rbda/: __init__.py  aba.py  collidable_points.py  collidable_shapes.py  coriolis.py  crba.py  forward_kinematics.py  jacobian.py  kinematic_constraints.py  mass_inverse.py  rigid_contacts.py  rnea.py  soft_contacts.py  utils.py
src/jaxsim/rbda/actuation/: __init__.py  common.py
src/jaxsim/rbda/contacts/: __init__.py  common.py  detection.py  quasi_rigid.py  relaxed_rigid.py  rigid.py  soft.py  soft_contacts.py  visco_elastic.py
src/jaxsim/simulation/: __init__.py  integrators.py  integrators_variable_step.py  ode.py  ode_data.py  ode_integration.py  simulator.py  simulator_callbacks.py  utils.py
src/jaxsim/sixd/: __init__.py
src/jaxsim/terrain/: __init__.py  terrain.py
src/jaxsim/training/: agent.py  distributions.py  memory.py  networks.py  sampler.py  trajectory_sampler.py
src/jaxsim/utils/: __init__.py  benchmark.py  jaxsim_dataclass.py  oop.py  tracing.py  vmappable.py  wrappers.py
tests/: benchmarks.py  conftest.py  test_actuation.py  test_ad_physics.py  test_api_com.py  test_api_contact.py  test_api_data.py  test_api_frame.py  test_api_joint.py  test_api_link.py  test_api_model.py  test_api_model_hw_parametrization.py  test_api_references.py  test_automatic_differentiation.py  test_benchmark.py  test_contact.py  test_coriolis.py  test_eom.py  test_exceptions.py  test_forward_dynamics.py  test_jax_oop.py  test_meshes.py  test_motor_dynamics.py  test_overflow.py  test_parsers_sdf.py  test_physics_algos_aba.py  test_physics_algos_rnea.py  test_physics_model_kin_dyn.py  test_pytree.py  test_simulations.py  test_visualizer.py  utils.py  utils_idyntree.py  utils_models.py  utils_rng.py  utils_testing.py
tests/assets/: 4_bar_opened.urdf  box.sdf  cartpole.urdf  double_pendulum.sdf  single_pendulum.sdf  sphere.sdf
