[metadata]
name = jaxsim
description = A physics engine in reduced coordinates implemented with JAX.
long_description = file: README.md
long_description_content_type = text/markdown
author = Diego Ferigo
author_email = diego.ferigo@iit.it
license = BSD
license_file = LICENSE
platforms = any
url = https://github.com/ami-iit/jaxsim

project_urls =
    Changelog = https://github.com/ami-iit/jaxsim/releases
    Source = https://github.com/ami-iit/jaxsim
    Tracker = https://github.com/ami-iit/jaxsim/issues

keywords =
    physics
    physics engine
    jax
    rigid body dynamics
    featherstone
    reinforcement learning
    robot
    robotics
    sdf
    urdf

classifiers =
    Development Status :: 4 - Beta
    Framework :: Robot Framework
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Games/Entertainment :: Simulation
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development

[options]
zip_safe = False
packages = find:
package_dir =
    =src
python_requires = >=3.8
install_requires =
    coloredlogs
    distrax
    flax
    jax 
    jaxlib 
    jaxlie
    jax_dataclasses < 1.4.0
    pptree
    rod
    scipy

[options.packages.find]
where = src

[options.extras_require]
style =
    black
    isort
testing =
    pytest
    pytest-icdiff
all =
    %(style)s
    %(testing)s

[tool:pytest]
addopts = -rsxX -v --strict-markers
testpaths = tests
