[metadata]
name = jaxsim
description = A differentiable physics engine and multibody dynamics library for control and robot learning.
long_description = file: README.md
long_description_content_type = text/markdown
author = Diego Ferigo
author_email = diego.ferigo@iit.it
license = BSD
license_files = LICENSE
platforms = any
url = https://github.com/ami-iit/jaxsim

project_urls =
    Changelog = https://github.com/ami-iit/jaxsim/releases
    Documentation = https://jaxsim.readthedocs.io
    Source = https://github.com/ami-iit/jaxsim
    Tracker = https://github.com/ami-iit/jaxsim/issues

keywords =
    physics
    physics engine
    jax
    rigid body dynamics
    featherstone
    reinforcement learning
    robot
    robotics
    sdf
    urdf

classifiers =
    Development Status :: 4 - Beta
    Framework :: Robot Framework
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Games/Entertainment :: Simulation
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development

[options]
zip_safe = False
packages = find:
package_dir =
    =src
python_requires = >=3.10
install_requires =
    coloredlogs
    jax >= 0.4.13
    jaxlib >= 0.4.13
    jaxlie >= 1.3.0
    jax_dataclasses >= 1.4.0
    pptree
    rod >= 0.3.0
    trimesh
    typing_extensions ; python_version < '3.12'

[options.packages.find]
where = src

[options.extras_require]
style =
    # Note: keep the black version in sync with style.yml and environment.yml.
    black[jupyter] ~= 24.0
    isort
    pre-commit
testing =
    idyntree >= 12.2.1
    networkx
    pytest >=6.0
    pytest-icdiff
    robot-descriptions
viz =
    lxml
    mediapy
    mujoco >= 3.0.0
all =
    %(style)s
    %(testing)s
    %(viz)s
